--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,3 +1,7 @@
 <p>
   intro works!
 </p>
+
+<p>Name: {{currentPlayer.name}}</p>
+<p>Score: {{currentPlayer.score}}</p>
+<p>key: {{currentPlayer.$key}}</p>
